--- a/data/analysis.ipynb
+++ b/data/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,23 +12,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Body</th>\n",
+       "      <th>Keywords</th>\n",
+       "      <th>Theme</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Candy factory didn't evacuate concerned worker...</td>\n",
+       "      <td>An eastern Pennsylvania candy factory didn’t e...</td>\n",
+       "      <td>An eastern Pennsylvania candy factory didn’t e...</td>\n",
+       "      <td>accident investigations, accidents, accidents,...</td>\n",
+       "      <td>us</td>\n",
+       "      <td>https://edition.cnn.com/2023/10/06/us/pennsylv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baltimore police ask for public's help identif...</td>\n",
+       "      <td>Two shooters were involved in an attack at Mor...</td>\n",
+       "      <td>Two shooters were involved in an attack at Mor...</td>\n",
+       "      <td>baltimore, brand safety-nsf crime, brand safet...</td>\n",
+       "      <td>us</td>\n",
+       "      <td>https://edition.cnn.com/2023/10/06/us/morgan-s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>An arrest warrant has been issued for a suspec...</td>\n",
+       "      <td>Authorities in Pennsylvania say they have issu...</td>\n",
+       "      <td>Authorities in Pennsylvania say they have issu...</td>\n",
+       "      <td>arrest warrants, arrests, brand safety-nsf cri...</td>\n",
+       "      <td>us</td>\n",
+       "      <td>https://edition.cnn.com/2023/10/06/us/josh-kru...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>115 improperly stored human remains found in C...</td>\n",
+       "      <td>An investigation into more than 115 bodies fou...</td>\n",
+       "      <td>An investigation into more than 115 bodies fou...</td>\n",
+       "      <td>brand safety-nsf death, brand safety-nsf sensi...</td>\n",
+       "      <td>us</td>\n",
+       "      <td>https://edition.cnn.com/2023/10/06/us/colorado...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Bronx day care provider and 2 others indicted ...</td>\n",
+       "      <td>A Bronx day care provider, her husband and his...</td>\n",
+       "      <td>A Bronx day care provider, her husband and his...</td>\n",
+       "      <td>brand safety-nsf crime, brand safety-nsf death...</td>\n",
+       "      <td>us</td>\n",
+       "      <td>https://edition.cnn.com/2023/10/05/us/bronx-da...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4107</th>\n",
+       "      <td>4108</td>\n",
+       "      <td>McCarthy commits to key concession in call wit...</td>\n",
+       "      <td>House GOP leader Kevin McCarthy outlined some ...</td>\n",
+       "      <td>House GOP leader Kevin McCarthy outlined some ...</td>\n",
+       "      <td>domestic alerts, domestic-us politics, governm...</td>\n",
+       "      <td>politics</td>\n",
+       "      <td>https://edition.cnn.com/2023/01/01/politics/mc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4108</th>\n",
+       "      <td>4109</td>\n",
+       "      <td>What to know about the suspected Chinese spy b...</td>\n",
+       "      <td>A suspected Chinese surveillance balloon in th...</td>\n",
+       "      <td>A suspected Chinese surveillance balloon in th...</td>\n",
+       "      <td>asia, brand safety-nsf sensitive, brand safety...</td>\n",
+       "      <td>politics</td>\n",
+       "      <td>https://edition.cnn.com/2023/02/04/politics/ch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4109</th>\n",
+       "      <td>4110</td>\n",
+       "      <td>Why the US hasn't shot down the suspected Chin...</td>\n",
+       "      <td>As the US and its Canadian partners continue t...</td>\n",
+       "      <td>As the US and its Canadian partners continue t...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>politics</td>\n",
+       "      <td>https://edition.cnn.com/2023/02/03/politics/us...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4110</th>\n",
+       "      <td>4111</td>\n",
+       "      <td>Chinese engineer sentenced to 8 years in US pr...</td>\n",
+       "      <td>A former graduate student in Chicago was sente...</td>\n",
+       "      <td>A former graduate student in Chicago was sente...</td>\n",
+       "      <td>armed forces, asia, brand safety-nsf crime, br...</td>\n",
+       "      <td>politics</td>\n",
+       "      <td>https://edition.cnn.com/2023/01/25/politics/ch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4111</th>\n",
+       "      <td>4112</td>\n",
+       "      <td>Tensions mount at the Belarus-Ukraine border a...</td>\n",
+       "      <td>Tensions are mounting at the border between Uk...</td>\n",
+       "      <td>Tensions are mounting at the border between Uk...</td>\n",
+       "      <td>belarus, border control, brand safety-nsf sens...</td>\n",
+       "      <td>world</td>\n",
+       "      <td>https://edition.cnn.com/2023/02/15/europe/russ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4112 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'An eastern Pennsylvania candy factory didn’t evacuate its employees – even as some said they smelled gas – before an explosion in March that left seven people dead and nearly a dozen others injured, the US Department of Labor announced.'"
+       "        ID                                              Title  \\\n",
+       "0        1  Candy factory didn't evacuate concerned worker...   \n",
+       "1        2  Baltimore police ask for public's help identif...   \n",
+       "2        3  An arrest warrant has been issued for a suspec...   \n",
+       "3        4  115 improperly stored human remains found in C...   \n",
+       "4        5  Bronx day care provider and 2 others indicted ...   \n",
+       "...    ...                                                ...   \n",
+       "4107  4108  McCarthy commits to key concession in call wit...   \n",
+       "4108  4109  What to know about the suspected Chinese spy b...   \n",
+       "4109  4110  Why the US hasn't shot down the suspected Chin...   \n",
+       "4110  4111  Chinese engineer sentenced to 8 years in US pr...   \n",
+       "4111  4112  Tensions mount at the Belarus-Ukraine border a...   \n",
+       "\n",
+       "                                            Description  \\\n",
+       "0     An eastern Pennsylvania candy factory didn’t e...   \n",
+       "1     Two shooters were involved in an attack at Mor...   \n",
+       "2     Authorities in Pennsylvania say they have issu...   \n",
+       "3     An investigation into more than 115 bodies fou...   \n",
+       "4     A Bronx day care provider, her husband and his...   \n",
+       "...                                                 ...   \n",
+       "4107  House GOP leader Kevin McCarthy outlined some ...   \n",
+       "4108  A suspected Chinese surveillance balloon in th...   \n",
+       "4109  As the US and its Canadian partners continue t...   \n",
+       "4110  A former graduate student in Chicago was sente...   \n",
+       "4111  Tensions are mounting at the border between Uk...   \n",
+       "\n",
+       "                                                   Body  \\\n",
+       "0     An eastern Pennsylvania candy factory didn’t e...   \n",
+       "1     Two shooters were involved in an attack at Mor...   \n",
+       "2     Authorities in Pennsylvania say they have issu...   \n",
+       "3     An investigation into more than 115 bodies fou...   \n",
+       "4     A Bronx day care provider, her husband and his...   \n",
+       "...                                                 ...   \n",
+       "4107  House GOP leader Kevin McCarthy outlined some ...   \n",
+       "4108  A suspected Chinese surveillance balloon in th...   \n",
+       "4109  As the US and its Canadian partners continue t...   \n",
+       "4110  A former graduate student in Chicago was sente...   \n",
+       "4111  Tensions are mounting at the border between Uk...   \n",
+       "\n",
+       "                                               Keywords     Theme  \\\n",
+       "0     accident investigations, accidents, accidents,...        us   \n",
+       "1     baltimore, brand safety-nsf crime, brand safet...        us   \n",
+       "2     arrest warrants, arrests, brand safety-nsf cri...        us   \n",
+       "3     brand safety-nsf death, brand safety-nsf sensi...        us   \n",
+       "4     brand safety-nsf crime, brand safety-nsf death...        us   \n",
+       "...                                                 ...       ...   \n",
+       "4107  domestic alerts, domestic-us politics, governm...  politics   \n",
+       "4108  asia, brand safety-nsf sensitive, brand safety...  politics   \n",
+       "4109                                                NaN  politics   \n",
+       "4110  armed forces, asia, brand safety-nsf crime, br...  politics   \n",
+       "4111  belarus, border control, brand safety-nsf sens...     world   \n",
+       "\n",
+       "                                                   Link  \n",
+       "0     https://edition.cnn.com/2023/10/06/us/pennsylv...  \n",
+       "1     https://edition.cnn.com/2023/10/06/us/morgan-s...  \n",
+       "2     https://edition.cnn.com/2023/10/06/us/josh-kru...  \n",
+       "3     https://edition.cnn.com/2023/10/06/us/colorado...  \n",
+       "4     https://edition.cnn.com/2023/10/05/us/bronx-da...  \n",
+       "...                                                 ...  \n",
+       "4107  https://edition.cnn.com/2023/01/01/politics/mc...  \n",
+       "4108  https://edition.cnn.com/2023/02/04/politics/ch...  \n",
+       "4109  https://edition.cnn.com/2023/02/03/politics/us...  \n",
+       "4110  https://edition.cnn.com/2023/01/25/politics/ch...  \n",
+       "4111  https://edition.cnn.com/2023/02/15/europe/russ...  \n",
+       "\n",
+       "[4112 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('news.csv', header=None)\n",
-    "df.iloc[1, 2]"
+    "df = pd.read_csv('news.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries = [\n",
+    "    'Please describe the explosion happened in Pennsylvania in March 2023.',\n",
+    "    'Do you know the casualties and economic losses caused by the floods in Libya？',\n",
+    "    'Did Turkey approve Finland’s application to join NATO?'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>query</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Please describe the explosion happened in Penn...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Do you know the casualties and economic losses...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Did Turkey approve Finland’s application to jo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               query\n",
+       "0  Please describe the explosion happened in Penn...\n",
+       "1  Do you know the casualties and economic losses...\n",
+       "2  Did Turkey approve Finland’s application to jo..."
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data = pd.DataFrame(columns=['query'], data=queries)\n",
+    "test_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data.to_csv('test.csv')"
    ]
   },
   {
